# statusbar

./: CMakeLists.txt  org.kde.StatusNotifierWatcher.service
debian/: control  rules
qml/: CardItem.qml  ControlCenter.qml  IconButton.qml  MprisItem.qml  ShutdownDialog.qml  StandardCard.qml  StandardItem.qml  SystemTray.qml  main.qml
src/: activity.cpp  appearance.cpp  backgroundhelper.cpp  capplications.cpp  controlcenterdialog.cpp  main.cpp  statusbar.cpp
src/appmenu/: appmenu.cpp  appmenumodel.cpp
src/libdbusmenuqt/: dbusmenuimporter.cpp
src/systemtray/: CMakeLists.txt  statusnotifierwatcher.cpp
